my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:22:22: error: call to undeclared function '__lasx_xvpickve2gr_wu'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   22 |   unsigned_int_out = __lasx_xvpickve2gr_wu((__m256)v4u64_op0, 0x2);
      |                      ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:22:45: error: use of undeclared identifier '__m256'
   22 |   unsigned_int_out = __lasx_xvpickve2gr_wu((__m256)v4u64_op0, 0x2);
      |                                             ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:25:3: error: use of undeclared identifier 'v4u64_op0'
   25 |   v4u64_op0 = (v4u64){0x0002000200020006, 0xfffffffffffffffe,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:25:16: error: use of undeclared identifier 'v4u64'
   25 |   v4u64_op0 = (v4u64){0x0002000200020006, 0xfffffffffffffffe,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:28:45: error: use of undeclared identifier '__m256'
   28 |   unsigned_int_out = __lasx_xvpickve2gr_wu((__m256)v4u64_op0, 0x0);
      |                                             ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:31:3: error: use of undeclared identifier 'v4u64_op0'
   31 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:31:16: error: use of undeclared identifier 'v4u64'
   31 |   v4u64_op0 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:34:45: error: use of undeclared identifier '__m256'
   34 |   unsigned_int_out = __lasx_xvpickve2gr_wu((__m256)v4u64_op0, 0x5);
      |                                             ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:37:3: error: use of undeclared identifier 'v4u64_op0'
   37 |   v4u64_op0 = (v4u64){0xffffff0100000001, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:37:16: error: use of undeclared identifier 'v4u64'
   37 |   v4u64_op0 = (v4u64){0xffffff0100000001, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:40:45: error: use of undeclared identifier '__m256'
   40 |   unsigned_int_out = __lasx_xvpickve2gr_wu((__m256)v4u64_op0, 0x7);
      |                                             ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvpickve2gr.c:43:3: error: use of undeclared identifier 'v4u64_op0'
   43 |   v4u64_op0 = (v4u64){0x0010001000100010, 0x0000000000100010,
      |   ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
